# bookMyEvent

contract/: Cargo.toml
contract/src/: lib.rs
frontend/: package.json
frontend/public/: index.html
frontend/src/: App.js  contract-abi.json
scripts/: deploy.js
