[package]
name = "event_ticket_system"
version = "0.1.0"
authors = ["[Your Name] <[your_email@example.com]>"]
edition = "2021"

[dependencies]
ink = { version = "5.0.0", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.6", default-features = false, features = ["derive"], optional = true }

[dev-dependencies]
ink_e2e = "5.0.0"

[lib]
name = "event_ticket_system"
path = "src/lib.rs"



[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
]
ink-as-dependency = []
e2e-tests = []

[profile.release]

overflow-checks = false

[profile.dev]

overflow-checks = false